# webdz8

./: README.md
webdz8/: main.py
webdz8/mongo_project/: __init__.py  config.ini  connection.py  models.py  pyproject.toml  quotes.json  run_author.py  seeds.py  test.py
