[tool.poetry]
name = "mongo_project"
version = "0.1.0"
description = ""
authors = ["Roma Loma <lomachinskiy.r@gmail.com>"]
readme = "README.md"
packages = [{include = "mongo_project"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pymongo = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"